# dlib-face-recognition

./: Cargo.toml  build.rs
examples/: draw.rs
src/: lib.rs  matrix.rs  wrapper.rs
src/face_encoding/: compare.rs  encoding.rs  encodings.rs
tests/: benchmarks.rs
