[package]
name = "dlib-face-recognition"
version = "0.1.7"
authors = ["Ashley <expenses@airmail.cc>", "h <besqer996@gnu.ac.kr>"]
edition = "2018"

description = "Unofficial Rust wrappers to the C++ library dlib, face recognition tools"
homepage = "https://github.com/podo-os"
repository = "https://github.com/podo-os/dlib-face-recognition"
readme = "README.md"
license = "BSD-3-Clause"

build = "build.rs"

include = [
    "src/**/*.rs",
    "build.rs",
    "Cargo.toml",
    "LICENSE",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

embed-all = ["embed-fd-nn", "embed-fe-nn", "embed-lp"]
embed-any = ["reqwest", "bzip2"]

embed-fd-nn = ["embed-any"]
embed-fe-nn = ["embed-any"]
embed-lp = ["embed-any"]

[dependencies]
cpp = { version = "0.5" }
image = { version = "0.23" }
opencv = { version = "0.53.0" }
serde = { version = "1.0.126" }
serde_json = { version = "1.0.64" }

[build-dependencies]
cpp_build = { version = "0.5" }
bzip2 = { version = "0.3", optional = true }
reqwest = { version = "0.9", optional = true }

[dev-dependencies]
lazy_static = { version = "1.4" }
